--- a/requirements.lock.txt
+++ b/requirements.lock.txt
@@ -1,3 +1,4 @@
+FreeSimpleGUIWeb==1.0.0
 imageio==2.35.1
 lazy_loader==0.4
 networkx==3.3
@@ -5,6 +6,7 @@ numpy==2.1.1
 opencv-python==4.10.0.84
 packaging==24.1
 pillow==10.4.0
+remi==2020.3.10
 scikit-image==0.24.0
 scipy==1.14.1
 tifffile==2024.9.20
